# copilot-demo

./: .gitignore  ingestion.py  main.py  pyproject.toml
graph/: graph.py  state.py
graph/chains/: generation.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
